--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,4 +1,4 @@
-<!-- Banner -->		
+<!-- Banner -->
 <section id="banner">
 
     <!--
@@ -12,11 +12,11 @@
         <header>
             <h2>TWENTY</h2>
         </header>
-        <p>This is <strong>Twenty</strong>, a free
+        <p>This is <strong>IKAG</strong>, a networking
         <br />
-        responsive template
+        community for you
         <br />
-        by <a href="http://html5up.net">HTML5 UP</a>.</p>
+        to find who you need</p>
         <footer>
             <ul class="buttons vertical">
                 <li><a href="#main" class="button fit scrolly">Tell Me More</a></li>
