--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -10,7 +10,7 @@
     <div class="inner">
 
         <header>
-            <h2>TWENTY</h2>
+            <h2>IKAG</h2>
         </header>
         <p>This is <strong>IKAG</strong>, a networking
         <br />
